# vlc-wl-idle-inhibit-3.0

./: meson.build  wl-idle-inhibit.c
